Packform/securitygroup.tf
#Instance Security Group
resource "aws_security_group" "hug-sg" {
  name        = "allow-ssh"
  description = "security group that allows ssh and all egress traffic"
  vpc_id = aws_default_vpc.default.id
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

   ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "It opens the port for SSH and Apache"
  }
}
